[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Text3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Button3D.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.377272, 0.0273448, 0.100608 )

[node name="Button3D" type="StaticBody"]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Text3D" parent="." instance=ExtResource( 2 )]
transform = Transform( 4.44089e-16, -1.49012e-08, -0.364835, -0.364835, -1.59475e-08, 0, -1.59475e-08, 0.364835, -1.49012e-08, 0, 0, 0 )
resolution = 139
text = "  PLANKS x3"

[connection signal="input_event" from="." to="." method="_on_Button3D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Button3D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button3D_mouse_exited"]
